[package]
name = "sched-callback"
version = "0.1.2"
edition = "2021"
description = "Rust library for async callback scheduling"
authors = ["Taehyeon Kim <argnmp@gmail.com>"]
keywords = ["callback", "async", "scheduler"]
repository = "https://github.com/argnmp/sched-callback"
readme = "README.md"
license = "MIT"

[lib]
doctest = false

[dependencies]
async-recursion = "1.1.1"
tokio = { version = "1.37.0", features = ["sync", "rt", "time", "macros"] }
